--- a/sass/components/_esm-header.sass
+++ b/sass/components/_esm-header.sass
@@ -41,7 +41,7 @@
     right: 0
     background-color: $color-blackboard
     transition: 0.3s ease
-    z-index: 99
+    z-index: 97
     pointer-events: none
     display: flex
     justify-content: space-between
@@ -82,7 +82,7 @@
     width: $size-menu
     height: $size-menu
     position: relative
-    z-index: 9
+    z-index: 99
     cursor: pointer
     font-size: $size-menu/2
     margin-left: -$size-menu/4
